objects/TNOPPST__TaxNowSetting__c.object
<CustomObject>
    <description>Object to store Avalara Credentials and TaxNow options</description>
    <fields>
        <fullName>TNOPPST__Account_Number__c</fullName>
        <description>Account Number for Avalara</description>
        <inlineHelpText>Avalara Account Number.  Can also be a Dashboard UserName, but this is not reccomended.  If Supplying a UserName instead of an Account Number, put the password into the License Key field.</inlineHelpText>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Active_Setting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, this is the TaxNowSetting record that will be referenced for Avalara Credentials, Origin Address and Tax Now Options.  Only one record can have this checked, and checking for this record will uncheck the one currently checked.</inlineHelpText>
        <label>Active TaxNow Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Automatic_Tax_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>UnChecked by default.  If this Box is checked AND Tax Calculations are Enabled, Tax may be recalculated upon Saving the Quote or Opportunity (recalculation will only be done if a value which might affect the tax calculation has changed)</inlineHelpText>
        <label>Automatic Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Commit_On_Status__c</fullName>
        <inlineHelpText>If Automatic Tax Calculation is Checked, AND Enable Commit is checked, when the status (Quotes) or stage (Opportunities) is set to correspond to this value, the Invoice will be Committed to Avalara upon Save.</inlineHelpText>
        <label>Finalized Status/Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Company_Code__c</fullName>
        <description>Company Code for Avalara Tax Calcs</description>
        <inlineHelpText>Dashboard Company Code that will be referenced in Tax Calculations for this TaxNowSetting Object.</inlineHelpText>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Enable_Address_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables Address Validation</description>
        <inlineHelpText>Checked by default.  If unchecked, Address Validations are disabled.</inlineHelpText>
        <label>Enable Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Enable_Commits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Committing to Avalara</description>
        <inlineHelpText>Unchecked by default.  Check this if you wish to be able to Commit Invoices to Avalara.  Note that once an Invoice is committed, it cannot have its details (line amounts, etc,) changed.</inlineHelpText>
        <label>Enable Commits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Enable_Tax_Calculation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables Tax Calcs for Avalara</description>
        <inlineHelpText>Checked by default.  If unchecked, Sales Tax Calculation is disabled.</inlineHelpText>
        <label>Enable Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Last_Validated__c</fullName>
        <label>Last Validated</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__License_Key__c</fullName>
        <description>Avalara License Key</description>
        <inlineHelpText>Avalara License Key.  Can Also be a Dashboard login password, but this is not reccomended.  If using a dashboard password, then Account Number must be the corresponding Username.</inlineHelpText>
        <label>License Key</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Origin_City__c</fullName>
        <inlineHelpText>City for Origin Address to be used in Avalara Tax Calculations</inlineHelpText>
        <label>Origin City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Origin_Country__c</fullName>
        <inlineHelpText>Country for Origin Address used in Avalara Tax Calcs.  Enter 2 or 3 character ISO country code.</inlineHelpText>
        <label>Origin Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Origin_Postal_Code__c</fullName>
        <inlineHelpText>Postal or Zip Code for Origin Address to be used in tax Calculations.  For US Zip Codes can be Zip5 or Zip9 (Zip + 4)</inlineHelpText>
        <label>Origin Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Origin_State__c</fullName>
        <inlineHelpText>State or Province for Origin Address to be used in Avalara Tax Calcs.  Use 2 character abbreviations as specified by US or Canada Postal Service.</inlineHelpText>
        <label>Origin State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Origin_Street__c</fullName>
        <inlineHelpText>Enter up to 3 Street Address lines for the Origin Address to be used in the Avalara Tax Calcs.  More lines can be entered, but only the first 3 will be used in tax Calculations.</inlineHelpText>
        <label>Origin Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Save_UnCommitted_Quotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default is unChecked.  If checked, whenever an uncommitted Opportunity or Quote has Tax Calculated, a Corresponding Uncommitted Invoice is saved to the Avalara Dashboard.  If not checked, the tax calculates, but nothing is saved to the Avalara Dashboard.</inlineHelpText>
        <label>Save UnCommitted Invoices On Tax Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Service_URL__c</fullName>
        <inlineHelpText>URL to use when calling the Avalara Service.  Example: https://avatax.avalara.net</inlineHelpText>
        <label>Service URL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Use_Acct_Name_for_Avalara_Cust_Num__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Checked, tax calculations will send the Account Name instead of the Account ID for the Customer Number.  Because the Customer Number is the key for Exemption Certificates, using the  Account ID is reccomended, since Account Name may not be unique.</inlineHelpText>
        <label>Use Acct Name for Avalara Cust Num</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Use_BillingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unchecked by default.  If checked, Tax Calculations will ignore the Shipping Address and instead use the Billing Address for the Destination Address when calculating Sales Tax.</inlineHelpText>
        <label>Use Billing Address for Tax Calc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Verify_Validated_Addresses__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Checked, The user has the opportunity to say yes or no to replacing an address with its validated version before the replacement occurs.  If not checked, the replacement happens without intervention.</inlineHelpText>
        <label>Verify Validated Addresses</label>
        <type>Checkbox</type>
    </fields>
    <label>TaxNowSetting</label>
    <listViews>
        <fullName>TNOPPST__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaxNowSettings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaxNowSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>